--- a/View/css/style.css
+++ b/View/css/style.css
@@ -53,6 +53,11 @@ input[type='radio'] {
     margin: 20px 0;
 }
 
+.table_body {
+    height: 300px;
+    overflow-y: scroll;
+}
+
 @media only screen and (min-width: 400px) {
     html {
         font-size: 0.8rem;
