--- a/View/css/style.css
+++ b/View/css/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-size: 10px;
+    font-size: 9px;
     border: 3px solid black;
     border-radius: 5px;
 }
@@ -54,8 +54,9 @@ input[type='radio'] {
 }
 
 .table_body {
-    max-height: 300px;
+    max-height: 200px;
     overflow-y: scroll;
+    overflow-x: visible;
 }
 
 @media only screen and (min-width: 400px) {
@@ -78,5 +79,9 @@ input[type='radio'] {
 
     .auto_selector {
         width: 30vw;
+    }
+
+    .table_body {
+        max-height: 400px;
     }
 }
