Changed table font-size

--- a/View/css/style.css
+++ b/View/css/style.css
@@ -59,20 +59,24 @@ input[type='radio'] {
     overflow-x: visible;
 }
 
+td {
+    font-size: 0.4rem;
+}
+
 @media only screen and (min-width: 400px) {
-    html {
+    html, td {
         font-size: 0.8rem;
     }
 }
 
 @media only screen and (min-width: 540px) {
-    html {
+    html, td {
         font-size: 1rem;
     }
 }
 
 @media only screen and (min-width: 768px) {
-    html {
+    html, td {
         font-size: 1.2rem;
         border: 0;
     }
