--- a/View/css/style.css
+++ b/View/css/style.css
@@ -6,12 +6,11 @@
 
 html {
     font-size: 9px;
-    border: 3px solid black;
-    border-radius: 5px;
 }
 
 body {
     min-height: 100vh;
+    margin: 2px;
 }
 
 main {
