--- a/View/css/style.css
+++ b/View/css/style.css
@@ -10,9 +10,9 @@ html {
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     max-width: 1000px;
-    margin: 2px auto;
+    margin: 5px auto;
 }
 
 main {
