--- a/View/css/style.css
+++ b/View/css/style.css
@@ -6,13 +6,15 @@
 
 html {
     font-size: 9px;
+    width: 100vw;
 }
 
 body {
     min-height: 100vh;
     width: 100%;
     max-width: 1000px;
-    margin: 5px auto;
+    margin: 0 auto;
+    padding: 0 3px;
 }
 
 main {
