--- a/View/css/style.css
+++ b/View/css/style.css
@@ -6,13 +6,13 @@
 
 html {
     font-size: 9px;
-    width: 100%;
+    width: 100vw;
 }
 
 body {
     min-height: 100vh;
+    width: 100vw;
     max-width: 1000px;
-    margin: 0 auto;
     padding: 0 3px;
 }
 
