--- a/View/css/style.css
+++ b/View/css/style.css
@@ -56,6 +56,7 @@ input[type='radio'] {
 
 .table_body {
     max-height: 200px;
+    max-width: 1000px;
     overflow-y: scroll;
     overflow-x: visible;
 }
