--- a/View/css/style.css
+++ b/View/css/style.css
@@ -59,7 +59,8 @@ input[type='radio'] {
     max-width: 1000px;
     overflow-y: scroll;
     overflow-x: visible;
-    margin: auto;
+    margin-left: 25vw;
+    margin-right: 25vw;
 }
 
 td {
