--- a/View/css/style.css
+++ b/View/css/style.css
@@ -89,6 +89,12 @@ td {
 
     .table_body {
         max-height: 400px;
+        
+    }
+}
+
+@media only screen and (min-width: 1300px) {
+    .table-body {
         margin-left: 25vw;
         margin-right: 25vw;
     }
